# blockchain

./: .gitignore
chain/: CMakeLists.txt  CTestTestfile.cmake  README.md  ReadME  app_test  transaction_test
chain/example/: main.cpp
chain/include/: block.h  block_body.h  block_header.h  blockchain.h  transaction.h
chain/include/core/: block.h  block_body.h  block_hasher.h  block_header.h  block_serializer.h  blockchain.h  transaction.h
chain/include/data/: body_data.h
chain/include/interfaces/: iblock_body.h  iblock_header.h  iblock_validator.h  iminer.h  itransaction_pool.h
chain/include/mining/: miner.h
chain/include/serializers/: block_body_serializer.h  block_header_serializer.h  block_serializer.h
chain/include/transaction/: transaction_pool.h
chain/include/validators/: block_validator.h
chain/src/: block.cpp  block_body.cpp  block_body_serializer.cpp  block_hasher.cpp  block_header.cpp  block_header_serializer.cpp  block_serializer.cpp  block_validator.cpp  blockchain.cpp  miner.cpp  transaction.cpp  transaction_pool.cpp
chain/test/: block_body_test.cpp  block_hasher_test.cpp  block_header_test.cpp  block_serializer_test.cpp  block_test.cpp  transaction_class_test.cpp
gRCP-server/: CMakeLists.txt  server.cpp  transaction.grpc.pb.cc  transaction.grpc.pb.h  transaction.pb.cc  transaction.pb.h  transaction.proto
wallet APIs/: .gitignore  README  README.md  main.go  transaction.proto  txt
wallet APIs/grpcclient/: grpc_client.go
wallet APIs/handlers/: transactions.go  wallet.go
wallet APIs/middleware/: auth.go
wallet APIs/models/: transaction.go  wallet.go
wallet APIs/repository/: transaction_repository.go  wallet_repository.go
wallet APIs/services/: transaction_service.go  wallet_service.go
wallet APIs/utils/: keys.go  signature.go
wallet APIs/wallet.db/: MANIFEST-000044  MANIFEST-000047
